test/bad/generics/print03.px

func f<Any T>(T x) T def
    return x

print f(chr), f(2)
